Add CRISP-DM process documentation

--- a/2020_languages.ipynb
+++ b/2020_languages.ipynb
@@ -28,7 +28,15 @@
  "cells": [
   {
    "source": [
-    "Read in the cleaned data and schema"
+    "Business Understanding:\n",
+    "How does age influence the languages an individual worked with in 2020?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Data Understanding and Prepare Data: Read in the cleaned data and schema from data_prep.ipynb"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -53,6 +61,13 @@
     "df = pd.read_csv(r'reduced_data.csv', sep = ',', error_bad_lines = False, index_col = False)\n",
     "df_schem = pd.read_csv(r'reduced_data_schema.csv', sep = ',', error_bad_lines = False, index_col = False)"
    ]
+  },
+  {
+   "source": [
+    "Begin Data Modeling/Evaluation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
