--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -28,7 +28,14 @@
  "cells": [
   {
    "source": [
-    "Read in the Data and the Schema"
+    "This file takes care of data understanding and Data Preparation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Read in the raw data and the schema"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -250,7 +257,7 @@
   },
   {
    "source": [
-    "Save cleaned data files"
+    "Save cleaned data files for use in analysis"
    ],
    "cell_type": "markdown",
    "metadata": {}
