--- a/language_learning.ipynb
+++ b/language_learning.ipynb
@@ -28,7 +28,14 @@
  "cells": [
   {
    "source": [
-    "Read in the cleaned data and schema"
+    "Business Understanding: What demographic factors impact how frequently an individual learns a new language or framework?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Read in the cleaned data and schema from data_prep.ipynb"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -53,6 +60,13 @@
     "df = pd.read_csv(r'reduced_data.csv', sep = ',', error_bad_lines = False, index_col = False)\n",
     "df_schem = pd.read_csv(r'reduced_data_schema.csv', sep = ',', error_bad_lines = False, index_col = False)"
    ]
+  },
+  {
+   "source": [
+    "Begin Data Modeling/Evaluation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
