ID steps of the data science process with markdowns

--- a/2020_languages.ipynb
+++ b/2020_languages.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,15 +56,29 @@
     "from sklearn.metrics import r2_score, mean_squared_error\n",
     "from collections import defaultdict\n",
     "import general_functions as gf\n",
-    "%matplotlib inline\n",
-    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "source": [
+    "Gather (see data_prep.ipynb for Assess and Clean Data steps)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_csv(r'reduced_data.csv', sep = ',', error_bad_lines = False, index_col = False)\n",
     "df_schem = pd.read_csv(r'reduced_data_schema.csv', sep = ',', error_bad_lines = False, index_col = False)"
    ]
   },
   {
    "source": [
-    "Begin Data Modeling/Evaluation"
+    "Analyze: Begin Data Modeling/Evaluation"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -319,6 +333,13 @@
     "top_lang_by_age = gf.add_top_per_cat(top_lang_by_age, list_of_ranges)\n",
     "top_lang_by_age"
    ]
+  },
+  {
+   "source": [
+    "Visualize"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
