--- a/formal_edu.ipynb
+++ b/formal_edu.ipynb
@@ -34,15 +34,8 @@
    "metadata": {}
   },
   {
-   "source": [
-    "Read in the cleaned data and schema from data_prep.ipynb"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,22 +48,29 @@
     "from sklearn.metrics import r2_score, mean_squared_error\n",
     "from collections import defaultdict\n",
     "import general_functions as gf\n",
-    "%matplotlib inline\n",
-    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "source": [
+    "Gather (see data_prep.ipynb for Assess and Clean Data steps)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_csv(r'reduced_data.csv', sep = ',', error_bad_lines = False, index_col = False)\n",
     "df_schem = pd.read_csv(r'reduced_data_schema.csv', sep = ',', error_bad_lines = False, index_col = False)"
    ]
   },
   {
    "source": [
-    "Begin Data Modeling/Evaluation"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "Remove responses of individuals who did not respond to the importance of formal education and create a list of unique responses"
+    "Clean: Remove responses of individuals who did not respond to the importance of formal education and create a list of unique responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -101,6 +101,13 @@
     "ed_impt_resp = list(df['NEWEdImpt'].unique())\n",
     "ed_impt_resp"
    ]
+  },
+  {
+   "source": [
+    "Analyze: Begin Data Modeling/Evaluation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -149,6 +156,13 @@
     "ed_impt_df = gf.total_count(ed_impt,'importance','count',ed_impt_resp)\n",
     "gf.bar_plotting(ed_impt_df,'Importance of Formal Education',plot = True)"
    ]
+  },
+  {
+   "source": [
+    "Analyze: Comparing Age to Formal Education Importance Responses"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -303,7 +317,7 @@
   },
   {
    "source": [
-    "Create a table comparing the percentage breakdown of each language worked with by age range and compare to the total breakdown"
+    "Visualize: Create a table comparing the percentage breakdown of each language worked with by age range and compare to the total breakdown"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -341,7 +355,7 @@
   },
   {
    "source": [
-    "Begin analysis with employment status"
+    "Analyze: Comparing Employment Status to Formal Education Importance Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -477,6 +491,13 @@
    ]
   },
   {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of each language worked with by employment status and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -509,7 +530,7 @@
   },
   {
    "source": [
-    "Begin ethnicity analysis"
+    "Analyze: Comparing Age to Formal Education Importance Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -627,6 +648,13 @@
    ]
   },
   {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of each language worked with by ethnicity and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -659,7 +687,7 @@
   },
   {
    "source": [
-    "Begin Years Code analysis"
+    "Analyze: Comparing Years of Coding to Formal Education Importance Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -778,6 +806,13 @@
    ]
   },
   {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of each language worked with by years of coding and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -810,7 +845,7 @@
   },
   {
    "source": [
-    "Begin Undergrad Major analysis"
+    "Analyze: Comparing Undergraduate Major to Formal Education Importance Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -994,6 +1029,13 @@
     "top_mjrs_resp = gf.add_top_per_cat(top_mjrs_resp, list_of_mjrs)\n",
     "top_mjrs_resp"
    ]
+  },
+  {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of each language worked with by undergraduate major and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
