--- a/language_learning.ipynb
+++ b/language_learning.ipynb
@@ -34,15 +34,8 @@
    "metadata": {}
   },
   {
-   "source": [
-    "Read in the cleaned data and schema from data_prep.ipynb"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,15 +48,29 @@
     "from sklearn.metrics import r2_score, mean_squared_error\n",
     "from collections import defaultdict\n",
     "import general_functions as gf\n",
-    "%matplotlib inline\n",
-    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "source": [
+    "Gather (see data_prep.ipynb for Assess and Clean Data steps)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_csv(r'reduced_data.csv', sep = ',', error_bad_lines = False, index_col = False)\n",
     "df_schem = pd.read_csv(r'reduced_data_schema.csv', sep = ',', error_bad_lines = False, index_col = False)"
    ]
   },
   {
    "source": [
-    "Begin Data Modeling/Evaluation"
+    "Analyze: Begin Data Modeling/Evaluation"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -147,7 +154,7 @@
   },
   {
    "source": [
-    "Begin Age Analysis"
+    "Analyze: Comparing Age to Frequency Learning a New Language Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -276,6 +283,13 @@
    ]
   },
   {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of frequency of learning a new language by age range and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -308,7 +322,7 @@
   },
   {
    "source": [
-    "Begin Country Analysis"
+    "Analyze: Comparing Countrty to Frequency Learning a New Language Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -421,6 +435,13 @@
    ]
   },
   {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of frequency of learning a new language by country and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -453,7 +474,7 @@
   },
   {
    "source": [
-    "Begin Ed Level Analysis"
+    "Analyze: Comparing Education Level to Frequency Learning a New Language Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -596,6 +617,13 @@
    ]
   },
   {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of frequency of learning a new language by education level and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -628,7 +656,7 @@
   },
   {
    "source": [
-    "Begin Employment Analysis"
+    "Analyze: Comparing Employment Status to Frequency Learning a New Language Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -765,6 +793,13 @@
    ]
   },
   {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of frequency of learning a new language by employment status and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -797,7 +832,7 @@
   },
   {
    "source": [
-    "Begin Job Satisfaction Analysis"
+    "Analyze: Comparing Job Satisfaction to Frequency Learning a New Language Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -912,6 +947,13 @@
    ]
   },
   {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of frequency of learning a new language by job satisfaction and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -944,7 +986,7 @@
   },
   {
    "source": [
-    "Begin Years Code Analysis"
+    "Analyze: Comparing Years of Coding to Frequency Learning a New Language Responses"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1061,6 +1103,13 @@
     "top_yrs_resp = gf.add_top_per_cat(top_yrs_resp, list_of_yrs)\n",
     "top_yrs_resp"
    ]
+  },
+  {
+   "source": [
+    "Visualize: Create a table comparing the percentage breakdown of frequency of learning a new language by years of coding and compare to the total breakdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
