add doc strings to any missing functions

--- a/2020_languages.ipynb
+++ b/2020_languages.ipynb
@@ -183,6 +183,16 @@
    "source": [
     "def age_bins(age):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    FUNCTION: sort the given age in to the ocrrect age range (or bin)\n",
+    "\n",
+    "    INPUTS:\n",
+    "        age - integer\n",
+    "\n",
+    "    OUTPUTS:\n",
+    "        string describe the age bin the input was sorted in to\n",
+    "    \"\"\"\n",
+    "    \n",
     "    if age < 10 :\n",
     "        return 'Under 10 Years'\n",
     "    elif age >= 10 and age < 20:\n",
