--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -235,6 +235,18 @@
    "outputs": [],
    "source": [
     "def remove_nan(df, threshold):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    FUNCTION: remove any columns with less than the given threshold of responses\n",
+    "\n",
+    "    INPUTS:\n",
+    "        df - data frame with data to clean\n",
+    "        threshold - minimum percentage of responses needed to keep a column\n",
+    "\n",
+    "    OUTPUTS:\n",
+    "        df with only columns that have the threshold of data\n",
+    "    \"\"\"\n",
+    "\n",
     "    df = df.dropna(axis = 1,thresh = (threshold*df.shape[0]))\n",
     "    return  df\n",
     "\n",
@@ -354,6 +366,18 @@
    ],
    "source": [
     "def remove_schema_rows(df,schema):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    FUNCTION: remove schema information related to the columns removed in the previous function\n",
+    "\n",
+    "    INPUTS:\n",
+    "        df - data frame with removed columns\n",
+    "        schema - data frame of raw data schema\n",
+    "\n",
+    "    OUTPUTS:\n",
+    "        data frame with the reduced schema\n",
+    "    \"\"\"\n",
+    "\n",
     "    col_names = list(df.columns)\n",
     "    new_schema = schema[~schema.Column.isin(col_names) == False]\n",
     "    return new_schema\n",
