--- a/formal_edu.ipynb
+++ b/formal_edu.ipynb
@@ -178,6 +178,16 @@
    "outputs": [],
    "source": [
     "def age_bins(age):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    FUNCTION: sort the given age in to the ocrrect age range (or bin)\n",
+    "\n",
+    "    INPUTS:\n",
+    "        age - integer\n",
+    "\n",
+    "    OUTPUTS:\n",
+    "        string describe the age bin the input was sorted in to\n",
+    "    \"\"\"\n",
     "    \n",
     "    if age < 10 :\n",
     "        return 'Under 10 Years'\n",
@@ -699,6 +709,16 @@
    "outputs": [],
    "source": [
     "def yr_bin(yrs):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    FUNCTION: sort the given years of coding in to the correct time range\n",
+    "\n",
+    "    INPUTS:\n",
+    "        yrs - string describing number of years coding\n",
+    "\n",
+    "    OUTPUTS:\n",
+    "        string describe the time range the input was sorted in to\n",
+    "    \"\"\"\n",
     "    \n",
     "    if yrs == 'Less than 1 year' :\n",
     "        return 'Less than 1 year'\n",
