expand on business descriptions

--- a/2020_languages.ipynb
+++ b/2020_languages.ipynb
@@ -29,7 +29,9 @@
   {
    "source": [
     "Business Understanding:\n",
-    "How does age influence the languages an individual worked with in 2020?"
+    "1) How does age influence the languages an individual worked with in 2020?\n",
+    "2) What are the most popular languages?\n",
+    "3) What are the least popular languages?"
    ],
    "cell_type": "markdown",
    "metadata": {}
