--- a/language_learning.ipynb
+++ b/language_learning.ipynb
@@ -28,7 +28,13 @@
  "cells": [
   {
    "source": [
-    "Business Understanding: What demographic factors impact how frequently an individual learns a new language or framework?"
+    "Business Understanding: \n",
+    "1) How does age impact how frequently an individual learns a new language or framework?\n",
+    "2) How does country impact how frequently an individual learns a new language or framework?\n",
+    "3) How does education level impact how frequently an individual learns a new language or framework?\n",
+    "4) How does employment status impact how frequently an individual learns a new language or framework?\n",
+    "5) How does job satisfaction impact how frequently an individual learns a new language or framework?\n",
+    "6) How does number of years coding impact how frequently an individual learns a new language or framework?"
    ],
    "cell_type": "markdown",
    "metadata": {}
