--- a/formal_edu.ipynb
+++ b/formal_edu.ipynb
@@ -28,7 +28,12 @@
  "cells": [
   {
    "source": [
-    "Business Understanding: What demographic factors impact an individual's opinion on the importance of a formal education?"
+    "Business Understanding: \n",
+    "1) How does age impact an individual's opinion on the importance of a formal education?\n",
+    "2) How does employment status impact an individual's opinion on the importance of a formal education?\n",
+    "3) How does ethnicity impact an individual's opinion on the importance of a formal education?\n",
+    "4) How does number of years coding impact an individual's opinion on the importance of a formal education?\n",
+    "5) How does undergraduate major impact an individual's opinion on the importance of a formal education?"
    ],
    "cell_type": "markdown",
    "metadata": {}
